--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,12 @@
 
     <groupId>com.leyou.parent</groupId>
     <artifactId>leyou</artifactId>
+    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
- 
+    <modules>
+        <module>ly-registry</module>
+    </modules>
+
     <parent>
          <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
