--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,11 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>ly-registry</module>
-        <module>lygateway</module>
+        <module>ly-gateway</module>
+        <module>ly-common</module>
+        <module>ly-item</module>
+        <module>ly-search</module>
+        <module>ly-upload</module>
     </modules>
 
     <parent>
