--- a/ly-registry/src/main/resources/application.yml
+++ b/ly-registry/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: ly-registry
 eureka:
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+#    registerWithEureka: false
+#    fetchRegistry: false
     service-url:
       defaultZone: http://127.0.0.1:10088/eureka
